Update nethermind image reference

--- a/images.yaml
+++ b/images.yaml
@@ -1,5 +1,5 @@
 images:
-  nethermind: ethpandaops/nethermind:performance
+  nethermind: nethermindeth/nethermind:simpleflat
   geth: ethpandaops/geth:performance
   reth: ethpandaops/reth:performance
   erigon: ethpandaops/erigon:performance
