Changed artifact to fast again

--- a/.github/workflows/update-eest-tests.yml
+++ b/.github/workflows/update-eest-tests.yml
@@ -53,14 +53,14 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh run download -R ethereum/execution-spec-tests -n fixtures_benchmark
+          gh run download -R ethereum/execution-spec-tests -n fixtures_benchmark_fast
           ls -la
 
       - name: Capture EEST tests
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # mv fixtures_benchmark.tar.gz fixtures_benchmark.tar.gz
+          mv fixtures_benchmark.tar.gz fixtures_benchmark.tar.gz
           python3 capture_eest_tests.py -o eest_tests
 
       - name: Detect repository changes
