--- a/.github/workflows/update-eest-tests.yml
+++ b/.github/workflows/update-eest-tests.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          lfs: true
+          #fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -221,6 +222,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "chore: refresh EEST tests and genesis files"
           committer: GitHub Actions <actions@github.com>
+          signoff: true
           author: GitHub Actions <actions@github.com>
           title: "chore: refresh EEST tests and genesis files"
           body: |
