--- a/.github/workflows/update-eest-tests.yml
+++ b/.github/workflows/update-eest-tests.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+          ref: ${{ github.head_ref }}
           #fetch-depth: 0
 
       - name: Set up Python
@@ -199,7 +200,7 @@ jobs:
           fi
 
       - name: Commit and push changes directly
-        if: steps.git-status.outputs.changed == 'true' && github.event_name == 'workflow_dispatch' && inputs.direct-commit == 'true'
+        if: steps.git-status.outputs.changed == 'true' && github.event_name == 'workflow_dispatch' && inputs.direct-commit == true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -212,11 +213,11 @@ jobs:
           git push
 
       - name: Configure Git LFS for PR
-        if: steps.git-status.outputs.changed == 'true' && !(github.event_name == 'workflow_dispatch' && inputs.direct-commit == 'true')
+        if: steps.git-status.outputs.changed == 'true' && !(github.event_name == 'workflow_dispatch' && inputs.direct-commit == true)
         run: git lfs install
 
       - name: Create pull request
-        if: steps.git-status.outputs.changed == 'true' && !(github.event_name == 'workflow_dispatch' && inputs.direct-commit == 'true')
+        if: steps.git-status.outputs.changed == 'true' && !(github.event_name == 'workflow_dispatch' && inputs.direct-commit == true)
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
