--- a/.github/workflows/update-eest-tests.yml
+++ b/.github/workflows/update-eest-tests.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-          ref: ${{ github.head_ref }}
+          #ref: ${{ github.head_ref }}
           #fetch-depth: 0
 
       - name: Set up Python
