--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -34,6 +34,7 @@ services:
       - --JsonRpc.JwtSecretFile=/tmp/jwt/jwtsecret
       - --JsonRpc.EngineHost=0.0.0.0
       - --JsonRpc.EnginePort=8551
+      - --JsonRpc.EnabledModules=[Debug,Eth,Subscribe,Trace,TxPool,Web3,Personal,Proof,Net,Parity,Health,Rpc]
       - --Network.DiscoveryPort=0
       - --Network.MaxActivePeers=0
       - --Init.DiscoveryEnabled=false
