repricing gh action

--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -15,15 +15,12 @@ on:
           - warmup/warmup-1000bl-16wi-24tx.txt
           - warmup/warmup-1000bl-16wi-1000tx.txt
         default: ''
-      client:
-        description: 'Comma-separated list of client names'
-        default: 'nethermind,geth,reth,besu,erigon,nimbus,ethrex'
       runs:
         description: 'Number of runs for the application'
         default: 1
       images:
         description: 'JSON map of images for the clients'
-        default: '{"nethermind":"default","geth":"default","reth":"default","erigon":"default","besu":"default","nimbus":"default","ethrex":"default"}'
+        default: '{"nethermind":"default","geth":"default","reth":"default","erigon":"default","besu":"default"}'
       opcodes_warmup_count:
         description: 'Number of opcode-warmup iterations'
         default: 1
@@ -39,6 +36,7 @@ on:
 
 jobs:
   set-matrix:
+    if: github.ref == 'refs/heads/repricing'
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -55,7 +53,7 @@ jobs:
         id: set-matrix
         run: |
           runs=${{ github.event.inputs.runs }}
-          clients="${{ github.event.inputs.client }}"
+          clients="geth,nethermind,erigon,besu,reth"
           IFS=',' read -ra client_array <<< "$clients"
           matrix_elements=()
           
@@ -72,12 +70,13 @@ jobs:
 
   build:
     needs: set-matrix
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, repricing]
 
     strategy:
       # Consume the JSON matrix we just emitted
       matrix: ${{ fromJson(needs.set-matrix.outputs.matrix) }}
       fail-fast: false
+      max-parallel: 5
 
     env:
       DOTNET_INSTALL_DIR: "~/.dotnet"
@@ -208,6 +207,7 @@ jobs:
             mkdir -p reports
             exit 0
           fi
+          echo "CLIENT_LIST=$CLIENT_LIST" >> $GITHUB_ENV
 
           rm -rf reports
           mkdir -p reports
@@ -222,7 +222,7 @@ jobs:
       - name: Generate Report
         if: ${{ github.event.inputs.txt_report == 'true' }}
         run: |
-          python3 report_txt.py --resultsPath extracted-results/results/ --clients "${{ github.event.inputs.client }}" --testsPath ${{ github.event.inputs.test }} 
+          python3 report_txt.py --resultsPath extracted-results/results/ --clients "$CLIENT_LIST" --testsPath ${{ github.event.inputs.test }} 
 
       - name: Zip the results folder
         run: |
@@ -270,7 +270,30 @@ jobs:
             --db-port ${{ env.DB_PORT }} \
             --db-user ${{ env.DB_USER }} \
             --db-name monitoring \
-            --table-name gas_benchmarks_ci \
+            --table-name repricings \
             --db-password "${{ env.DB_PASSWORD }}" \
             --log-level DEBUG \
             --reports-dir 'extracted-results/reports/'
+
+  retrigger:
+    needs: populate-db
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/repricing' && needs.populate-db.result == 'success' }}
+    steps:
+      - name: Retrigger workflow
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: multi-parallel.yml
+          ref: "${{ github.ref }}"
+          token: "${{ secrets.GH_TOKEN }}"
+          inputs: >
+            {
+              "test": "${{ github.event.inputs.test }}",
+              "warmup": "${{ github.event.inputs.warmup }}",
+              "runs": "${{ github.event.inputs.runs }}",
+              "images": "${{ github.event.inputs.images }}",
+              "opcodes_warmup_count": "${{ github.event.inputs.opcodes_warmup_count }}",
+              "filter": "${{ github.event.inputs.filter }}",
+              "txt_report": "${{ github.event.inputs.txt_report }}",
+              "genesis": "${{ github.event.inputs.genesis }}"
+            }
