--- a/images.yaml
+++ b/images.yaml
@@ -1,8 +1,8 @@
 images:
-  nethermind: ethpandaops/nethermind:performance
-  geth: ethpandaops/geth:performance
-  reth: ethpandaops/reth:performance
-  erigon: ethpandaops/erigon:performance
+  nethermind: ethpandaops/nethermind:master
+  geth: ethpandaops/geth:master
+  reth: ethpandaops/reth:main
+  erigon: ethpandaops/erigon:v3.3.3
   besu: ethpandaops/besu:performance
   nimbus: statusim/nimbus-eth1:performance
   ethrex: ghcr.io/lambdaclass/ethrex:performance
