Change neth image

--- a/images.yaml
+++ b/images.yaml
@@ -1,5 +1,5 @@
 images:
-  nethermind: ethpandaops/nethermind:master
+  nethermind: ethpandaops/nethermind:performance
   geth: ethpandaops/geth:master
   reth: ethpandaops/reth:main
   erigon: ethpandaops/erigon:v3.3.3
