--- a/images.yaml
+++ b/images.yaml
@@ -2,5 +2,5 @@ images:
   nethermind: ethpandaops/nethermind:master
   geth: ethpandaops/geth:master
   reth: ethpandaops/reth:main
-  erigon: ethpandaops/erigon:v3.3.3
+  erigon: erigontech/erigon:v3.3.3
   besu: ethpandaops/besu:performance
