Update erigon image source in images.yaml

--- a/images.yaml
+++ b/images.yaml
@@ -2,7 +2,7 @@ images:
   nethermind: ethpandaops/nethermind:performance
   geth: ethpandaops/geth:master
   reth: ethpandaops/reth:main
-  erigon: ethpandaops/erigon:v3.3.3
+  erigon: erigontech/erigon:v3.3.3
   besu: ethpandaops/besu:performance
   nimbus: statusim/nimbus-eth1:performance
   ethrex: ghcr.io/lambdaclass/ethrex:performance
